# progetto_sistemi_operativi_2020

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  Makefile  Note.org  README.md  cmake.sh  completion.sh
MentOS/: buddysystem.c  scheduler_algorithm.c
input/: big_file_posizioni.txt  file_posizioni.txt
src/: ack_manager.c  client.c  client_lib.c  defines.c  device.c  err_exit.c  fifo.c  files.c  message.c  position.c  semaphore.c  server.c  server_lib.c  shared_memory.c
src/inc/: ack_manager.h  client_lib.h  defines.h  device.h  err_exit.h  fifo.h  files.h  message.h  position.h  semaphore.h  server.h  server_lib.h  shared_memory.h
src/test/: client.cpp  defines.cpp  device.cpp  fifo.cpp  files.cpp  main.cpp  message.cpp  position.cpp
